# lottery

./: .gitignore  Lottery.cabal  lottery.cabal  package.yaml  requirements.pip  stack.yaml
app/cli/: Main.hs
features/: creation.feature  deletion.feature
features/steps/: environment.py  lottery.py
src/: Lottery.hs  Lottery.old  Lottery2.hs
src/Models/: Lottery.hs
src/UseCases/: ReadLottery.hs
test/: Main.hs  Spec.hs
tests/unit/: Main.hs
